--- a/pogoda/src/index.css
+++ b/pogoda/src/index.css
@@ -26,17 +26,7 @@ body {
   background-color: rgba(4, 15, 22, 0.3);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
 }
-.container::after{
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: url(bg.png);
-  z-index: -1;
-  opacity: 0.7;
-}
+
 .search-section{
   display: flex;
   align-items: center;
@@ -92,7 +82,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px 0 50px 0
+  padding: 20px 0 30px 0
 }
 .current-weather .weather-icon{
   width: 140px;
@@ -103,6 +93,11 @@ body {
   font-size: 3rem;
   display: flex;
 }
+.current-weather h1{
+  color: #FFFF;
+  font-weight: 300;
+  font-size: 2rem;
+}
 .current-weather .temperature span{
   font-size: 1.5rem;
   font-weight: 400;
@@ -110,8 +105,30 @@ body {
 }
 .current-weather .description{
   text-transform: capitalize;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
+.szczegoly {
+  display: grid;
+  grid-template-columns: repeat(2, auto); 
+  justify-content: center; 
+  column-gap: 25px;
+  row-gap: 15px;
+  margin-top: 20px;
+  padding: 0 40px 0 40px;
+}
+
+.szczegoly p{
+  font-size: 0.8rem;
+  color: #ccc;
+  text-transform: uppercase;
+}
+.szczegoly-item {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  color: #fff;
+}
+
 
 .hourly-forecast .weather-item .weather-icon{
   width: 28px;
@@ -124,8 +141,7 @@ body {
   gap: 5px;
 }
 .hourly-forecast{
-  padding: 16px 25px;
-  border-top: 2px solid rgba(255, 255, 255, 0.3);
+  padding: 25px 25px;
 }
 .hourly-forecast .weather-list{
   display: flex;
