Implementacja API do głównegop wyszukania, przygotowanie i podmiana ikon

--- a/pogoda/src/index.css
+++ b/pogoda/src/index.css
@@ -128,7 +128,9 @@ body {
   gap: 8px;
   color: #fff;
 }
-
+.szczegoly-item h5 {
+  white-space: nowrap; 
+}
 
 .hourly-forecast .weather-item .weather-icon{
   width: 28px;
